welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit:Boolean=false
def haveBaggle():Boolean=
{
  for (pas<-1 to 6)
  {
    avance()
    if (estSurBiscuit())
    {
      vuBiscuit=true
    }
  }
  for (pas<-1 to 6)
  {
    reculer()
  }
  return vuBiscuit
}